Added option to format code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -344,6 +344,7 @@
     <string name="hint_string_resource">String resource</string>
     <string name="hint_resource_reference">Any resource reference</string>
     <string name="msg_fix_diagnostic">QuickFix</string>
+    <string name="title_format_code">Format code</string>
 </resources>
 
 
